# diploma

./: .gitignore  README.md  agent.py  phisics_engine.py  physics_engine.py  pygame_engine_control.py  pyproject.toml  run_agent.py
agent/: pyproject.toml
agent/agent/: __init__.py  agents.py  config.py  env.py  main.py  reward.py  training.py
physics_engine/: __init__.py  physics_engine.py  pyproject.toml
pid/: pyproject.toml
pid/pid/: __init__.py  config.py  feedback.py  main.py  pid_controller.py  system.py
