[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["gshjis <ilya.togan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.4.4"
matplotlib = "^3.10.8"
pygame = "^2.6.1"
sympy = "^1.14.0"
scipy = "^1.17.1"
pymunk = "^7.2.0"
pybullet = "^3.2.7"
gymnasium = "^1.3.0"
torch = {version = "^2.11.0+cpu", source = "torch_cpu"}
control = "^0.10.2"
bdsim = "^1.1.2"
pyqt5 = "^5.15.11"
tqdm = "^4.67.3"
stable-baselines3 = "^2.8.0"
agent = {path = "agent", develop = true}
pid = {path = "pid", develop = true}
physics-engine = {path = "physics_engine", develop = true}


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"


[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-agent = "agent.main:main"
